--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/kipra/Desktop/test/Testas2/jes/jesss;C:/Users/kipra/Desktop/test/Testas2/jes/jes;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/kipra/Desktop/test/Testas/neeeeeeeeww testtt;C:/Users/kipra/Desktop/test/Testas/test123;C:/Users/kipra/Desktop/test/Testas2/jes/jesss;C:/Users/kipra/Desktop/test/Testas2/jes/jes;;;;;;\"}"
             }
         ]
     }
